hermes_fuzz_executed_few_shot_v2/fuzz_73_execution
'use strict';
function f() {
    return void 0;
}
a.toString;
var _a;
(function (n) {
    if (((n = n.default) && n.__esModule) || typeof n === 'object') {
        return;
    }
    n = Object.assign({}, n);
})(a);
<fim_middle>a.a.toString;


Execution Output ------------------:
test.js:13:1: error: invalid expression (possible JSX: pass -parse-jsx to parse)
<fim_middle>a.a.toString;
^
